[metadata]
name = browser-use-webui
version = 0.1.0
description = Control your browser with AI assistance
long_description = file: README.md
long_description_content_type = text/markdown
author = Browser Use Team
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    browser-use==0.1.37
    pyperclip==1.9.0
    gradio==5.10.0
    json-repair
    langchain-mistralai==0.2.4
    python-dotenv
    langchain-openai
    langchain-anthropic
    langchain-google-genai
    langchain-ollama

[options.packages.find]
where = src